# rusty-kaspa

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  plan.md
.claude/: settings.local.json
.github/workflows/: ci.yaml  udp-ci-guard.yml
.serena/: project.yml
components/addressmanager/: Cargo.toml
components/connectionmanager/: Cargo.toml
components/p2p-libp2p/: Cargo.toml
components/p2p-libp2p/docs/: lifecycle.md
components/p2p-libp2p/examples/: dcutr_harness.rs
components/p2p-libp2p/src/: config.rs  helper_api.rs  lib.rs  metadata.rs  metrics.rs  proto.rs  relay_auto.rs  relay_pool.rs  reservations.rs  service.rs  swarm.rs  transport.rs
components/p2p-libp2p/src/relay_pool/: parse.rs  tests.rs
components/p2p-libp2p/src/service/: helper.rs  inbound.rs  meta_stream.rs  reservations.rs  tests.rs
components/p2p-libp2p/src/swarm/: dcutr_bootstrap.rs  tests.rs
components/p2p-libp2p/src/transport/: auto_role.rs  identity.rs  multiaddr.rs  provider.rs  provider_types.rs  test_support.rs  tests.rs
components/p2p-libp2p/src/transport/driver/: dcutr.rs  dial.rs  events.rs  mod.rs  reservations.rs  state.rs  types.rs
components/p2p-libp2p/src/transport/tests/: auto_role.rs  driver.rs
components/p2p-libp2p/tests/: dcutr.rs  dcutr_advertisement.rs
components/udp-sidechannel/: Cargo.toml
components/udp-sidechannel/examples/: dump_vectors.rs
components/udp-sidechannel/fuzz/: .gitignore  Cargo.toml
components/udp-sidechannel/fuzz/fuzz_targets/: digest_frame.rs  frame_header.rs
components/udp-sidechannel/src/: config.rs  fixtures.rs  lib.rs  metrics.rs  service.rs  task.rs
components/udp-sidechannel/src/block/: mod.rs
components/udp-sidechannel/src/digest/: manager.rs  mod.rs  parser.rs  store.rs  types.rs
components/udp-sidechannel/src/frame/: assembler.rs  header.rs  mod.rs
components/udp-sidechannel/src/injector/: mod.rs  router_peer.rs
components/udp-sidechannel/src/runtime/: mod.rs
components/udp-sidechannel/src/tx/: mod.rs
components/udp-sidechannel/tests/: adverse.rs  crash_only.rs  flow_harness.rs  hygiene.rs  ingest_shutdown.rs  vectors.rs
database/src/: lib.rs  registry.rs  udp_digest.rs
docs/: tor-integration-research.md
docs/perf/: udp.md
docs/udp/: block-mode.md  fuzzing.md
kasbench/: Cargo.toml  README.md  docker-compose.yml
kasbench/dashboard/: index.html
kasbench/src/: config.rs  engine.rs  main.rs  metrics.rs
kaspad/: Cargo.toml
kaspad/src/: args.rs  daemon.rs  lib.rs  libp2p.rs  test_sync.rs  tor_manager.rs  udp.rs  udp_tx.rs
protocol/flows/: Cargo.toml
protocol/p2p/: Cargo.toml
pruning-optimisation/: PHASE4_FIXES.md  phase0-baseline-runbook.md  plan.md  rapid-iteration-simpa.md  run-kaspad-pruning-seq.sh  run-simpa-fullblocks-probe.sh  run-simpa-mainnetish.sh  run-simpa-matrix-10bps-fullblocks.sh  run-simpa-matrix-10bps.sh  run-simpa-matrix.sh  run-simpa-pruning.sh
pruning-optimisation/baseline/: phase0-simpa-baseline.md  phase0-testnet-2025-11-01.md  phase4-field-run.md
pruning-optimisation/design/: phase1-batching-architecture.md
pruning-optimisation/research/: gemini.md  gpt.md
pruning-optimisation/scripts/: collect_pruning_metrics.py  run-simpa-crashtest.py  summarize_pruning_metrics.py  watch-pruning-metrics.sh
pruning-optimisation/testing-runs/: CODEX_COMPARISON.md  COMPARISON.md  RUN_LEDGER.md
research/tor-integration/: CHATGPT_RESEARCH.MD  CRITICAL_VALIDATION_AREAS.md  GEMINI_RESEARCH.MD  P2P_CONNECTION_ANALYSIS.md  P2P_FINDINGS_SUMMARY.txt  P2P_INJECTION_VISUAL.txt  P2P_QUICK_REFERENCE.txt  README_P2P_ANALYSIS.md  RESEARCH_ENGINEER_PROMPT.md  SOCKS_PROXY_IMPLEMENTATION.md  plan.md  tor-integration-research.md
research/tor-integration/tor-prototype/: Cargo.toml
research/tor-integration/tor-prototype/src/: main.rs
rpc/service/: Cargo.toml
scripts/: collect_pruning_metrics.py
sensor/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.amd64  PHASE3_GUIDE.md  README.md  docker-compose.yml  schema.sql  sensor.toml.example  test_probe.py  test_vps_probe.py
sensor/dashboard/: kaspa-multi-sensor-dashboard.json  kaspa-sensor-dashboard.json  peer_id_migration.sql
sensor/src/: address_flows.rs  config.rs  export.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres.rs  prober.rs  storage.rs
sensor/tests/: integration_test.rs
simpa/src/: main.rs
tcp-hole-punch/: BRIDGE-MODE-SUMMARY.md  CODE-DEEP-DIVE-CODEX.md  CODE-DEEP-DIVE.md  DCUTR-GAP-NOTE.md  DCUTR-bridge-regression.md  LAB-REPORT-1.md  LAB-REPORT-5.md  LAB-REPORT-6.md  LAB-REPORT-7.md  LAB-REPORT-8.md  LIBP2P-OPERATOR.md  MAINNET-SOAK-REPORT.md  PLAN-CLEANUP.md  REVIEW-REPORT.md  SANITY-AUDIT-2.md  SANITY-REPORT.md  SWARM-NOTES.md  plan-bridge.md
tcp-hole-punch/docs/: BRIDGE-MODE-SUMMARY.md  DCUTR-LAB-RUNBOOK.md  LIBP2P-OPERATOR.md  NAT-LAB-RECORD.md  PLAN-RELAY-AUTO.md  RELAY-AUTO-OVERVIEW.md  SWARM-NOTES.md  TASKS-RELAY-AUTO.md  TESTER-QUICKSTART-DCUTR.md  inbound-current-state.mmd  inbound-startup-unified-simple.mmd  inbound-startup-unified.mmd  outbound-current-state.mmd
tcp-hole-punch/lab/: helper_punch.sh  hole_punch_lab.sh
testing/integration/: Cargo.toml
udp/: TASKS-phase3-prep.md  plan.md
udp/docs/: AUDIT-phase1-2.md  digest-wire-format.md  integration-shutdown-notes.md  lora-bridge-mvp.md  lora-bridge-reliability-protocol.md  lora-digest-authenticity-live-run.md  lora-digest-authenticity.md  lora-digest-schema-decision.md  lora-end-to-end-lab.md  lora-live-digest-producer-lab.md  lora-live-soak-report.md  lora-prototype.md  lora-reliability-report.md  lora-testnet-live-node-capacity.md  lora-testnet-live-node-lab-result-2026-05-14.md  lora-testnet-live-node-lab.md  lora-testnet-robust-soak-report.md  lora-two-node-divergence-lab.md  prd.md  review-readiness.md
udp/research/: gpt.md
udp/tools/: lab_tx_ingest.sh  lora_live_soak_lab.sh  lora_reliability_harness.sh  lora_testnet_live_node_lab.sh  soak.sh
udp/tools/generator/: Cargo.toml
udp/tools/generator/src/: main.rs
udp/tools/lora-bridge/: Cargo.toml  README.md
udp/tools/lora-bridge/src/: main.rs
(+240 files in other folders)
