[package]
name = "kasbench"
version = "1.0.0"
edition = "2021"
authors = ["Kaspa developers"]
license = "ISC"
description = "High-performance Kaspa network benchmarking platform"

[[bin]]
name = "kasbench-engine"
path = "src/main.rs"

[dependencies]
# Kaspa dependencies
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-client.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-notify.workspace = true
kaspa-utils.workspace = true

# Crypto
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }

# Async runtime
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "signal"] }
futures = "0.3"
async-channel = "2.0"
triggered = "0.1"
tokio-stream = "0.1"

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Utilities
clap = { version = "4.0", features = ["derive"] }
log.workspace = true
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex.workspace = true
rand = "0.8"
itertools = "0.11"
parking_lot = "0.12"

# WebSocket for dashboard communication
tokio-tungstenite = "0.20"

# Web server for dashboard
warp = "0.3"

# Metrics
prometheus = "0.13"

# Faster hex encoding
faster-hex = "0.9"

[dev-dependencies]
criterion = "0.5"