[package]
name = "kaspa-p2p-libp2p"
description = "Kaspa libp2p transport adapter (feature-gated)"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-utils.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
kaspa-p2p-lib.workspace = true
futures-util = { workspace = true, default-features = false, features = ["alloc"] }
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

[features]
default = []
serde = ["dep:serde", "serde_with"]

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
