[package]
name = "kaspa-udp-sidechannel"
description = "UDP side-channel ingest components for rusty-kaspa"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kaspa-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace = true
kaspa-p2p-lib.workspace = true
kaspa-connectionmanager.workspace = true
faster-hex.workspace = true
kaspa-database.workspace = true
secp256k1.workspace = true
sha2.workspace = true
bincode.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread"] }
workflow-log.workspace = true
log.workspace = true
bytes.workspace = true
crc32fast.workspace = true
blake3.workspace = true
parking_lot.workspace = true
prost.workspace = true

[features]
default = []

[dev-dependencies]
kaspa-addressmanager.workspace = true
kaspa-consensus.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-p2p-flows = { workspace = true, features = ["test-utils"] }
kaspa-mining.workspace = true
kaspa-p2p-mining.workspace = true
once_cell.workspace = true
tempfile.workspace = true

[lints]
workspace = true
