[package]
name = "tor-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-socks2 = { version = "0.9.1", default-features = false }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "sync"] }
tor-interface = { version = "0.6.0", features = ["legacy-tor-provider"] }
