[package]
name = "udp-generator"
description = "DigestV1 traffic generator for UDP soak/integration tests"
edition = "2021"
version = "0.1.0"
authors = ["Kaspa developers"]
license = "ISC"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
faster-hex.workspace = true
kaspa-core = { path = "../../../core" }
kaspa-consensus-core = { path = "../../../consensus/core" }
kaspa-udp-sidechannel = { path = "../../../components/udp-sidechannel" }
kaspa-addresses = { path = "../../../crypto/addresses" }
kaspa-txscript = { path = "../../../crypto/txscript" }
kaspa-grpc-client = { path = "../../../rpc/grpc/client" }
kaspa-rpc-core = { path = "../../../rpc/core" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time"] }
secp256k1.workspace = true
crc32fast.workspace = true
borsh.workspace = true
